--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,43 @@
+body {
+    font: 20px Ariel serif;
+}
+
 .navbar {
     background-color: #088A68;
 }
 
 .quem-somos {
     background-color: #A9F5D0;
+    color: #585858;
 }
 
 .margin {
-    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-top: 10px;
+}
+
+.h3 {
+    padding-top: 20px;
+}
+
+.parceiros {
+    background-color: #088A68;
+    color: #D8D8D8;
+    padding-top: 10px;
+}
+
+.servicos {
+    background-color: #A9F5D0;
+    color: #585858;
+}
+
+.servicos .p {
+    font: 20px Arial serif;
+}
+
+.footer {
+    background-color: #088A68;
+    color: #D8D8D8;
+    padding-top: 40px;
+    font: 15px;
 }
